Update notification banner for v4-rc announcement

--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -326,18 +326,18 @@ body {
 }
 
 .ext4-notification a {
-    color: #f05758;
+    color: #00c19c;
     text-decoration: none;
 }
 
 .ext4-notification a:hover,
 .ext4-notification a:active,
 .ext4-notification a:focus {
-    color: #d34c53;
+    color: #00a081;
 }
 
 .ext4-notification .notification-container {
-    background: url('../images/extdotnet4-beta-bg.jpg') center right no-repeat;
+    background: url('../images/extdotnet4-rc-bg.jpg') center right no-repeat;
     width: 100%;
     display: block;
     height: 150px;
@@ -354,15 +354,15 @@ body {
 .ext4-notification .notification-img {
     text-align: center;
     position: relative;
-    width: 225px;
+    width: 275px;
     height: 150px;
     padding: 28px 0;
 }
 
 .ext4-notification .notification-text {
     text-align: left;
-    width: 510px;
-    padding: 33px 0 33px 10px;
+    width: 460px;
+    padding: 43px 0 43px 15px;
 }
 
 .ext4-notification .notification-action {
@@ -372,14 +372,13 @@ body {
 }
 
 .ext4-notification .btn-notification {
-    background-color: #f05758;
+    background-color: #00c19c;
     color: #fff;
     text-decoration: none;
     font-size: 14px;
     font-weight: 500;
     line-height: 1.6;
     padding: 10px 20px;
-    margin-right: 10px;
     -webkit-transition: all .3s ease-in-out;
          -o-transition: all .3s ease-in-out;
             transition: all .3s ease-in-out;
@@ -392,7 +391,7 @@ body {
 .ext4-notification .btn-notification:hover,
 .ext4-notification .btn-notification:active,
 .ext4-notification .btn-notification:focus {
-    background-color: #d34c53;
+    background-color: #00a081;
     color: #fff;
     text-decoration: none;
 }
